# arikoto

./: .gitignore  CMakeLists.txt  CNAME  GNUmakefile  README.md  index.html  limine.conf  markdownblocks.js  style.css  template-x86_64.iso
.github/workflows/: codeql.yml
kernel/: CMakeLists.txt  GNUmakefile  get-deps
kernel/bin-x86_64/: kernel
kernel/include/: irq.h  isr.h  kernel.h  keyboard.h  memory.h  pic.h  pit.h  print.h  request.h  scheduler.h  serial.h  shell.h  string.h  vfs.h
kernel/obj-aarch64/: cc-runtime.c.d  main.c.d
kernel/obj-x86_64/: framebuffer.c.d  main.c.d  memory.c.d  scheduler.c.d
kernel/src/: framebuffer.c  framebuffer.h  gdt.c  idt.c  isr.c  kernel.h  keyboard.c  logo.c  main.c  memory.c  memory.h  panic.c  pic.c  pit.c  print.c  ramdisk.c  ramdisk.h  request.c  request.h  scheduler.c  scheduler.h  shell.c  string.c  string.h  stub.asm  sysinfo.c  tests.c  vfs.c  vfs.h
